# bpy-geometries

./: .gitignore  geometry.py  hexagonal_bullet.py  hexagonal_bullet_rosette.py  hexagonal_column.py  indented_column.py  make-hollow-column.py  pyproject.toml  pyrightconfig.json  requirements.txt  roughened.py  subdivided_mesh.py  test_geometry.py  test_rosette.py  test_rosette_multiple.py
bpy_geometries/: __init__.py  aggregate.py  aggregate_intersecting.py  aggregate_touching.py  bevel.py  droxtal.py  geometry.py  hexagonal_bullet.py  hexagonal_bullet_rosette.py  hexagonal_column.py  inclusions.py  indented_column.py  roughened.py  roughened_mmg.py
scripts/: install_mmg.sh
tests/: test_aggregate.py  test_aggregate_intersecting.py  test_aggregate_touching.py  test_bevel_geometry.py  test_droxtal_geometry.py  test_geometry.py  test_inclusions_geometry.py  test_roughened_geometry.py  test_roughened_mmg.py
